--- a/my-react-vite-app/src/components/Navbar.css
+++ b/my-react-vite-app/src/components/Navbar.css
@@ -1,18 +1,7 @@
 
 :root{
     --white:#fff;
+    --black:#000;
+    --lightblack:#202020;
 
-}
-
-.navbar-center {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.navbar-nav-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%; 
 }
